--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                   title="APPLE Clone"
                   ><i class="bx bx-plus"></i
                 ></a>
-                <a href="https://idyllic-faun-6f6f4e.netlify.app/" title="More Details"
+                <a href="https://669338104b9eb4cd11f31b73--chic-squirrel-e04976.netlify.app/" title="More Details"
                   ><i class="bx bx-link"></i
                 ></a>
               </div>
